<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    tools:context=".NavigationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="80dp"
            android:gravity="center">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/home_vector"
                >
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_navigation"
                android:textColor="@color/white">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="80dp"
            android:gravity="center">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/search_vector">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_navigation"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/library_vector">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_navigation"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>