<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".YourPlaylistFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/liked">

            </ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liked_playlist"
                    android:textColor="@color/white">

                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_playlist"
                        android:textColor="@color/white">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playlist_song_number"
                        android:textColor="@color/white">

                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/textView4"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView4"-->
<!--            tools:layout_editor_absoluteY="295dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/textView2"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView2"-->
<!--            tools:layout_editor_absoluteY="444dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView5"-->
<!--            android:layout_width="63dp"-->
<!--            android:layout_height="16dp"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/textView3"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView3"-->
<!--            tools:layout_editor_absoluteY="550dp" />-->

<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Button"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/textView5"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView5"-->
<!--            tools:layout_editor_absoluteY="762dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>